Elimina imágenes no utilizadas y añade nuevas rutas para obtener tipos de sala y actualizar boletos y pagos
